--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>회원목록</title>
 <link rel="stylesheet" href="../../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 <link rel="stylesheet" href="../../../css/style.css">
 
 <link rel="stylesheet" href="../../../css/sidebars.css">
@@ -13,12 +13,10 @@
 </head>
 
 <body>
-
-
 	<form>
 		<div class="container-fluid bg-light">
-			<br>
-			<div class="row">
+			
+			<div class="row box-white mt-3">
 				<div class="col-6 col-md-2">
 					<img src="../../../images/xdmin/coupang.png" class="img-fluid">
 				</div>
@@ -77,6 +75,9 @@
 				id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
 				
 				<div class="offcanvas-header">
+					<img class="bi me-2" width="120" height="30"
+						src="../../../images/xdmin/coupang.png">
+					</img> 
 					<h3 class="offcanvas-title" id="offcanvasScrollingLabel">Admin Menu</h3>
 					<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 				</div>
@@ -84,9 +85,6 @@
 				<div class="offcanvas-body p-0">
 					<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
 						<a href="#" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom"> 
-							<svg class="bi me-2" width="30" height="24">
-								<use xlink:href="#bootstrap"></use>
-							</svg> 
 							<span class="fs-5 fw-semibold">Collapsible</span>
 						</a>
 						
@@ -144,9 +142,9 @@
 					</div>
 				</div>
 				<div class="offcanvas-footer">
-					<div class="dropdown border-top m-3 p-3">
+					<div class="dropdown border-top ms-3 py-3">
 					      <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-					        <img src="../../../images/xdmin/lee.jpg" alt="" width="32" height="32" class="rounded-circle me-2">
+					        <img src="../../../images/xdmin/lee.jpg" alt="" width="40" height="50" class="rounded-circle border border-5 me-2">
 					        <strong>Yun</strong>
 					      </a>
 					      <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
@@ -266,7 +264,7 @@
 			<br> <br>
 			<div class="width92">
 				<div class="row">
-					<div class="col-8 col-md-3 ms-3 p-1">검색결과 : 13 / 총 13명 검색결과</div>
+					<div class="col-8 col-md-3 ms-3 p-1 border border-2 box-white">검색결과 : 13 / 총 13명 검색결과</div>
 					<div class="col-1 col-md-1 ms-1 me-0 p-0">
 						<a class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#excelModal"> <svg
 								xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-excel"
@@ -280,7 +278,7 @@
 					</div>
 					<div class="col-12 col-md ms-1 me-0 my-1">
 						<div class="text-end">
-							<div class="btn-group btn-group-sm" role="group">
+							<div class="btn-group btn-group-sm box-white" role="group">
 								<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" disabled> <label
 									class="btn btn-outline-secondary" for="btnradio1">view</label> <input type="radio" class="btn-check"
 									name="btnradio" id="btnradio2" autocomplete="off" checked> <label class="btn btn-outline-secondary"
@@ -502,117 +500,6 @@
 			</div>
 		</div>
 	</form>
-
-<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
-		<a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom"> <svg
-				class="bi me-2" width="30" height="24">
-				<use xlink:href="#bootstrap"></use></svg> <span class="fs-5 fw-semibold">Collapsible</span>
-		</a>
-		<ul class="list-unstyled ps-0">
-			<li class="mb-1">
-				<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
-					data-bs-target="#home-collapse" aria-expanded="false">Home</button>
-				<div class="collapse" id="home-collapse" style="">
-					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-						<li><a href="#" class="link-dark rounded">Overview</a></li>
-						<li><a href="#" class="link-dark rounded">Updates</a></li>
-						<li><a href="#" class="link-dark rounded">Reports</a></li>
-					</ul>
-				</div>
-			</li>
-			<li class="mb-1">
-				<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
-					data-bs-target="#dashboard-collapse" aria-expanded="false">Dashboard</button>
-				<div class="collapse" id="dashboard-collapse" style="">
-					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-						<li><a href="#" class="link-dark rounded">Overview</a></li>
-						<li><a href="#" class="link-dark rounded">Weekly</a></li>
-						<li><a href="#" class="link-dark rounded">Monthly</a></li>
-						<li><a href="#" class="link-dark rounded">Annually</a></li>
-					</ul>
-				</div>
-			</li>
-			<li class="mb-1">
-				<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
-					data-bs-target="#orders-collapse" aria-expanded="false">Orders</button>
-				<div class="collapse" id="orders-collapse" style="">
-					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-						<li><a href="#" class="link-dark rounded">New</a></li>
-						<li><a href="#" class="link-dark rounded">Processed</a></li>
-						<li><a href="#" class="link-dark rounded">Shipped</a></li>
-						<li><a href="#" class="link-dark rounded">Returned</a></li>
-					</ul>
-				</div>
-			</li>
-			<li class="border-top my-3"></li>
-			<li class="mb-1">
-				<button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
-					data-bs-target="#account-collapse" aria-expanded="false">Account</button>
-				<div class="collapse" id="account-collapse" style="">
-					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-						<li><a href="#" class="link-dark rounded">New...</a></li>
-						<li><a href="#" class="link-dark rounded">Profile</a></li>
-						<li><a href="#" class="link-dark rounded">Settings</a></li>
-						<li><a href="#" class="link-dark rounded">Sign out</a></li>
-					</ul>
-				</div>
-			</li>
-		</ul>
-	</div>
-
-<div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-      <span class="fs-4">Sidebar</span>
-    </a>
-    <hr>
-    <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-item">
-        <a href="#" class="nav-link active" aria-current="page">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"></use></svg>
-          Home
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-          Dashboard
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-          Orders
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-          Products
-        </a>
-      </li>
-      <li>
-        <a href="#" class="nav-link link-dark">
-          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"></use></svg>
-          Customers
-        </a>
-      </li>
-    </ul>
-    <hr>
-    <div class="dropdown">
-      <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-        <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-        <strong>mdo</strong>
-      </a>
-      <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-        <li><a class="dropdown-item" href="#">New project...</a></li>
-        <li><a class="dropdown-item" href="#">Settings</a></li>
-        <li><a class="dropdown-item" href="#">Profile</a></li>
-        <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Sign out</a></li>
-      </ul>
-    </div>
-  </div>
 
 
 	<script type="text/javascript">
